--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "git:update" : "git add . && git commit - m [WIP] && git push",
+    "git:update": "git add . && git commit - m [WIP] && git push",
     "git:build": "tsc && vite build && git add . && git commit -m [WIP] && git push"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.29.0",
@@ -21,5 +22,9 @@
     "eslint-plugin-promise": "^6.1.1",
     "typescript": "^4.9.4",
     "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "lit-element": "^3.2.2",
+    "lit-html": "^2.5.0"
   }
 }
