--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "vite": "^3.2.3"
   },
   "dependencies": {
+    "firebase": "^9.15.0",
     "lit-element": "^3.2.2",
-    "lit-html": "^2.5.0"
+    "lit-html": "^2.5.0",
+    "navigo": "^8.11.1"
   }
 }
