--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vite": "^3.2.3"
   },
   "dependencies": {
+    "@firebase/firestore": "^3.8.0",
     "firebase": "^9.15.0",
     "lit-element": "^3.2.2",
     "lit-html": "^2.5.0",
